# 9tcg-2d

./: Cargo.toml  README.MD
src/: lib.rs
src/common/: desks_datas.rs  game_state.rs  mod.rs  settings.rs  test_data.rs
src/core/: action_event.rs  card.rs  card_info.rs  card_info_manager.rs  duel.rs  duel_impls.rs  effect.rs  filed.rs  mod.rs  player_info.rs  process.rs
src/core/actions/: mod.rs  to_client_actions.rs  to_server_actions.rs
src/desk/: desk_button_action.rs  desks.rs  detail.rs  list.rs  mod.rs  scroll_list.rs
src/duel/: common.rs  connected_page.rs  main_duel.rs  mod.rs
src/menu/: menu_button_action.rs  mod.rs
src/server/: mod.rs
src/splash/: mod.rs
src/utils/: drag_and_drop.rs  mod.rs  preview_plugins.rs
