[package]
name = "tcg_2d"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "jpeg",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
] }
bevy_kira_audio = { version = "0.22.0", features = ["mp3"] }
bevy-persistent = { version = "0.7.0", features = ["all"] }
serde = "1.0.217"
dirs = { version = "5.0.1" }
bevy_simple_text_input = "0.10.0"
bevy-inspector-egui = "0.28.0"